<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frm_add_expense"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="2dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--<AutoCompleteTextView
                android:id="@+id/actvSaveExpensesExpensesName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Expenses Name" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="2dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_drop_down_exp_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_edit_black_24dp"
                        android:drawableRight="@drawable/ic_action_down_arrow"
                        android:drawableTint="@color/colorPrimary"
                        android:focusable="false"
                        android:gravity="top"
                        android:hint="@string/title_select_exp"
                        android:padding="@dimen/_2sdp"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSaveExpensesDiscription"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_edit_black_24dp"
                        android:gravity="top"
                        android:hint="@string/description"
                        android:padding="5dp"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSaveExpensesAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_rupee"
                        android:drawableTint="@color/colorPrimary"
                        android:hint="@string/title_amount"
                        android:inputType="numberDecimal"
                        android:maxLength="8"
                        android:padding="5dp"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSaveExpensesDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/colorPrimary"
                        android:focusable="false"
                        android:hint="@string/date"
                        android:padding="5dp"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSaveExpensesSelectDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableLeft="@drawable/ic_camera_front_black_24dp"
                        android:drawablePadding="5dp"
                        android:focusable="false"
                        android:hint="@string/title_select_document"
                        android:padding="5dp"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:elevation="8dp"
                android:orientation="vertical">

                <com.infinity.infoway.vimal.util.common.RippleViewCreator
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnSaveExpensesSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_gradient"
                        android:text="@string/title_save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </com.infinity.infoway.vimal.util.common.RippleViewCreator>

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
