<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/linear_add_sus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_gravity="center"
                    android:elevation="@dimen/_10sdp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="5dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:contentPadding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:background="@drawable/bg_circle_report"
                            android:padding="@dimen/_10sdp"
                            app2:srcCompat="@drawable/ic_supervisor_account_black_24dp" />

                        <TextView
                            android:id="@+id/txt_title_add_sus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/title_add_Suspecting_Report"
                            android:textColor="@color/transparent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/title_view_attendance_details"
                            android:textColor="@color/transparent"
                            android:textSize="14sp"
                            android:visibility="gone" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_view_sus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_2sdp"

                android:layout_weight="1"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_gravity="center"
                    android:elevation="@dimen/_10sdp"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="5dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:contentPadding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:background="@drawable/bg_circle_myschedule"
                            android:padding="@dimen/_10sdp"
                            app2:srcCompat="@drawable/ic_edit_view" />

                        <TextView
                            android:id="@+id/txt_title_view_sus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/title_view_Suspecting_Report"
                            android:textColor="@color/transparent"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/title_view_retailer_details"
                            android:textColor="@color/transparent"
                            android:textSize="14sp"
                            android:visibility="gone" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>